--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -8,4 +8,8 @@
     <Folder Include="Entities\Concrete\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.4" />
+  </ItemGroup>
+
 </Project>
